# simple-async-calculator

./: .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: black.yml  code_quality.yml  formatter.yml  production_deployment.yml  pull_request_actions.yml  push_actions.yml
contrib/: create_tables.sql
docker/: dev.Dockerfile  prod.Dockerfile  test.Dockerfile
logging_conf/: dev.yml  production.yml
shell/: runtests.sh
simple_async_calculator/: app.py  settings.py
simple_async_calculator/api/: handlers.py
simple_async_calculator/entities/: db.py
simple_async_calculator/entities/api/: create_task.py  task_detail.py  tasks_listing.py
simple_async_calculator/enums/: status.py
simple_async_calculator/helpers/: timings.py  tracing.py
simple_async_calculator/services/: calculator.py  cron.py
simple_async_calculator/storage/: __init__.py  dependencies.py  tables.py  task.py
src/simple_async_calculator/: cli.py  settings.py
src/simple_async_calculator/api/: handlers.py
src/simple_async_calculator/entities/: create_task.py  task_detail.py  tasks_listing.py
src/simple_async_calculator/entities/api/: create_task.py  task_detail.py
src/simple_async_calculator/entities/db/: task.py
src/simple_async_calculator/enums/: operator.py  status.py
src/simple_async_calculator/services/: calculator.py  tasks.py
src/simple_async_calculator/storage/: __init__.py  dependencies.py  task.py
tests/: conftest.py
tests/api/: test_errors.py  test_success.py
tests/cron/: test_error.py  test_success.py
unit_tests/: test_calculator.py
