[tool.pylint]
disable = "missing-module-docstring"
extension-pkg-whitelist = "pydantic"

[tool.poetry]
name = "simple-async-calculator"
version = "0.1.0"
description = ""
authors = ["Андрей Леонтьев <andruwwwka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
click = "^8.1.3"
uvicorn = "^0.20.0"

[tool.poetry.group.pylint]
optional = true

[tool.poetry.group.pylint.dependencies]
pylint = "^2.15.6"

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.mypy.dependencies]
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
