[tool.pylint]
disable = "missing-module-docstring"
extension-pkg-whitelist = "pydantic"

[tool.coverage.run]
branch = true
source = ["./simple_async_calculator"]
omit = [
    "simple_async_calculator/storage/dependencies.py",
]
command_line = "-m pytest --junitxml=pytest.xml"
concurrency = ["greenlet"]

[tool.coverage.report]
fail_under = 99
skip_covered = true
show_missing = true
precision = 2

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "simple-async-calculator"
version = "0.1.0"
description = ""
authors = ["Андрей Леонтьев <andruwwwka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
aiocron = "^1.8"

[tool.poetry.group.pylint]
optional = true

[tool.poetry.group.pylint.dependencies]
pylint = "^2.15.6"

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-mock = "^3.10.0"
coverage = "^6.5.0"

[tool.poetry.group.mypy.dependencies]
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
